# itmo-labs

1 year/Базы данных/Лабораторная работа 1/: Datalogic.drawio  Infologic.drawio  creation_script.sql  drop_script.sql
1 year/Базы данных/Лабораторная работа 2/: README.MD  Task1.sql
1 year/Базы данных/Лабораторная работа 3/: .gitignore  Datalogic.drawio  creation_script.sql  drop_script.sql  function.sql  readme.md  (+2 more)
2 year/АК/: README.md
2 year/АК/Лабораторная работа 3/: .pylintrc  README.md  pyproject.toml
2 year/АК/Лабораторная работа 3/.github/workflows/: CI-linter.yml  CI-tester.yml
2 year/АК/Лабораторная работа 3/ak_lab3/: isa.py  machine.py  translator.py
2 year/АК/Лабораторная работа 3/examples/asm/: cat.asm  hello.asm  hello_world.asm  prob1.asm
2 year/АК/Лабораторная работа 3/examples/input/: cat.txt  hello.txt
2 year/АК/Лабораторная работа 3/examples/json/: cat.json  hello.json  hello_world.json  prob1.json
2 year/АК/Лабораторная работа 3/tests/: test_golden.py
2 year/АК/Лабораторная работа 3/tests/golden/: cat.yml  hello.yml  hello_world.yml  prob1.yml
2 year/Вычислительная матемтатика/Лабораторная работа 6/: pyproject.toml  Сиразетдинов ЛР6 Отчет.docx
2 year/Вычислительная матемтатика/Лабораторная работа 6/lab/: console_worker.py  main.py
2 year/Вычислительная матемтатика/Лабораторная работа 6/lab/method/: euler.py  euler_modiffed.py  miln.py
2 year/Вычислительная матемтатика/Лабораторная работа 6/lab/model/: Equation.py
3 year/АПС/: АПС лаб1.docx  АПС лаб1.drawio  АПС лаб2.docx
4 year/ТВ/: docker-compose.yml  nginx.Dockerfile
(+943 files in other folders)
