[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Azat222 <azat222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.5.1"
numpy = "^1.26.4"
prettytable = "^3.10.0"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
